# hiddenbox

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  compose.yml  main.tf  pyproject.toml  requirements.txt  variables.tf
.github/workflows/: test.yml
ansible/roles/docker/tasks/: main.yml
app/: requirements.txt
app/backend/: Dockerfile  requirements.txt
app/backend/src/: main.py
app/backend/src/lib/: __init__.py  crypto.py  datatypes.py  redis_service.py
app/frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
app/frontend/src/: App.tsx  consts.ts  index.css  main.tsx
app/frontend/src/components/: ExpandButton.tsx  Footer.tsx  GridBackground.tsx  Header.tsx  Heading.tsx  LoginCard.tsx  NavBar.tsx  Photo.tsx  ThemeToggle.tsx
app/frontend/src/context/: AuthContext.tsx
app/frontend/src/layouts/: BaseLayout.tsx
app/frontend/src/pages/: dashboard.tsx  login.tsx
app/src/lib/: crypto.py
crypto/: Cargo.toml
crypto/src/: lib.rs
db/: files.db
docs/: CONTRIBUTING.md
nginx/conf.d/: default.conf
redis/: Dockerfile
roles/common/tasks/: main.yaml  main.yml
src/api/: main.py  requirements.txt
src/api/lib/: __init__.py  crypto.py  datatypes.py
src/api/services/: __init__.py  redis.py  redis_service.py  s3_service.py
src/web/: index.html  package.json  pnpm-lock.yaml
src/web/src/: index.css
src/web/src/components/: Button.tsx  Header.tsx  LoginCard.tsx  ProtectedRoute.tsx  Section.tsx  Starry.tsx
src/web/src/layouts/: BaseHead.tsx  BaseLayout.tsx
src/web/src/pages/: dashboard.tsx
src/web/src/types/: types.ts
static/: index.html  scripts.js  style.css
templates/: inventory.tpl
tests/unit/: test_crypto.py
