[project]
name = "hiddenbox"
description = "Encrypted and private file management service in the cloud"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "ruff",
  "pytest",
  "fastapi",
  "pre-commit",
  "python-multipart",
  "cryptography",
]

[tool.ruff]
line-length = 120
exclude = [
  ".venv",
  "venv",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "F",     # pyflakes: undefined names, unused imports, etc.
  "E",     # pycodestyle (errors): whitespace and formatting issues
  "W",     # pycodestyle (warnings): line breaks, indentation
  "B",     # flake8-bugbear: likely bugs and design issues
  "UP",    # pyupgrade: suggests syntax improvements for newer Python versions
  "SIM",   # flake8-simplify: simplifies redundant code patterns
  "C4",    # flake8-comprehensions: improves use of list/set/dict comprehensions
  "TID",   # flake8-tidy-imports: catches disallowed or shadowed imports
  "PERF",  # perflint: flags inefficient code patterns
  "RUF",   # ruff-specific rules: ensures good Ruff usage itself
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 1

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = [
  "tests",
]
pythonpath = "." 
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
