[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[lib]
name = "crypto_service"
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.10.1"
rand = "0.8.5"
sha2 = "0.10"
uuid = { version = "1.3", features = ["v4", "serde"] }
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

pyo3 = { version = "0.19", features = ["extension-module"] }